# dbus-cxx

./: .astylerc  .clang-format  AUTHORS  CMakeLists.txt  COPYING  Jenkinsfile  Makefile.am  NEWS  README.md  TODO  configure.ac  dbus-cxx-2.0.pc.cmake  dbus-cxx-config-version.cmake.in  dbus-cxx-config.cmake.in  dbus-cxx-config.h.cmake  dbus-cxx-glib-2.0.pc.cmake  dbus-cxx-glibmm-1.0.pc.in  dbus-cxx.h  dbuscxx.kdevelop  make-dist.sh
branches/api-cleanup/dbus-cxx/: Makefile.am  ax_dbus_cxx_xml2cpp.m4  dbus-cxx.h
branches/dbus-cxx-2/: CMakeLists.txt  README.md  dbus-cxx.spec.m4  svn2cl.authors
branches/dbus-cxx-2/dbus-cxx-glibmm/: Makefile.am
compat/: CMakeLists.txt  README  fcntl.c  fcntl.h  getdtablesize.c  pipe2.c  poll.c  poll.h  posix_win.c  stdlib.h  time.h  unistd.h  win32netcompat.h
compat/sys/: ioctl.h  socket.h  time.h  types.h  un.h
dbus-cxx/: CMakeLists.txt  ChangeLog  Makefile.am  README  accumulators.h  acinclude.m4  callmessage.cpp  callmessage.h  configure.ac  configure.in  connection.cpp  connection.h  connection.h.m4  dbus-cxx-1.0.pc.in  dbus-cxx-glibmm.h  dbus-cxx-private.h  dbus-cxx.h  dbus-cxx.spec.m4  dbus-error.h  dbus_signal.h  dbuscxx.kdevelop  demangle.h  demarshaling.cpp  demarshaling.h  dispatcher.cpp  dispatcher.h  enums.h  error.cpp  error.h  errormessage.cpp  errormessage.h  filedescriptor.h  forward_decls.h  headerlog.h  interface.cpp  interface.h  interfaceproxy.cpp  interfaceproxy.h  marshaling.cpp  marshaling.h  (+85 more)
dbus-cxx-glib/: CMakeLists.txt  dbus-cxx-glib-2.0.pc.cmake  dbus-cxx-glib.h  dispatcher.cpp  dispatcher.h  glibdispatcher.cpp  glibdispatcher.h
dbus-cxx-glib/unit-tests/: CMakeLists.txt  calleeclass.h  dbus-wrapper-glib-tests.sh  glib-caller.cpp  test-glib-dispatcher.cpp
dbus-cxx-glibmm/: Makefile.am  dispatcher.cpp  dispatcher.h
dbus-cxx-qt/: CMakeLists.txt  dbus-cxx-qt-2.0.pc.cmake  dbus-cxx-qt.cpp  dbus-cxx-qt.h  qtdispatcher.cpp  qtdispatcher.h  qtthreaddispatcher.cpp  qtthreaddispatcher.h
dbus-cxx-qt/unit-tests/: CMakeLists.txt  calleeclass.cpp  dbus-wrapper-qt-tests.sh  dbus-wrapper-recursive-signal.sh  qt-caller.cpp  recursive-signal-test-qt.cpp  test-qt-dispatcher.cpp
dbus-cxx-uv/: CMakeLists.txt  dbus-cxx-uv-2.0.pc.cmake  dbus-cxx-uv.cpp  dbus-cxx-uv.h  uvdispatcher.cpp  uvdispatcher.h
dbus-cxx-uv/unit-tests/: CMakeLists.txt  dbus-wrapper-uv-tests.sh  test-uv-dispatcher.cpp  uv-caller.cpp
dbus-cxx/daemon-proxy/: DBusDaemonProxy.cpp  DBusDaemonProxy.h  README.md  org.freedesktop.DBus.xml
dbus-cxx/dbus-cxx/: Makefile.am  accumulators.h  callmessage.cpp  callmessage.h  connection.cpp  connection.h  dbus_signal.h.m4  dispatcher.cpp  dispatcher.h  enums.h  error.cpp  error.h  errormessage.h  filedescriptor.h  forward_decls.h  interface.cpp  interface.h.m4  interfaceproxy.cpp  interfaceproxy.h  interfaceproxy.h.m4  message.cpp  message.h  messageappenditerator.cpp  messageappenditerator.h  messagefilter.h  messageiterator.cpp  messageiterator.h  method.h.m4  method_impl.h.m4  methodbase.cpp  methodbase.h  methodproxy.h.m4  methodproxybase.cpp  methodproxybase.h.m4  object.cpp  objectpathhandler.cpp  objectproxy.cpp  objectproxy.h.m4  path.h  pendingcall.cpp  (+21 more)
dbus-cxx/dbus-cxx-glibmm/: Makefile.am  dispatcher.cpp  dispatcher.h
dbus-cxx/debian/: changelog  control  control.m4  copyright  dbus-cxx-dev.install  dbus-cxx-doc.install  dbus-cxx-glibmm-dev.install  dbus-cxx0.install  rules
dbus-cxx/doc/: Doxyfile  Makefile.am  doxygen_to_devhelp.xsl
dbus-cxx/examples/: Makefile.am
dbus-cxx/standard-interfaces/: introspectableinterfaceproxy.cpp  introspectableinterfaceproxy.h  objectmanagerproxy.cpp  objectmanagerproxy.h  peerinterfaceproxy.cpp  peerinterfaceproxy.h  propertiesinterfaceproxy.cpp  propertiesinterfaceproxy.h
dbus-cxx/tools/: Makefile.am  code-generator.h  generate_adapter.cpp  generate_adapter.h  generate_proxy.cpp  parsed_object.cpp  parsed_object.h  xml2cpp.cpp  xml_parser.cpp  xml_parser.h
dbus-cxx/unit-tests/: Makefile.am  callmessagetests.cpp  messageiteratortests.cpp  messageiteratortests.h
examples/quick-start/: Makefile.am  quickstart_client_0.cpp  quickstart_server_0.cpp
tools/: CMakeLists.txt  Makefile.am  arg.cpp  code-generator.cpp  code-generator.h  generate_adapter.cpp  generate_proxy.cpp  interface-info.cpp  interface-info.h  introspect.cpp  method-info.cpp  method-info.h  method.cpp  method.h  node-info.cpp  node-info.h  parsed_object.cpp  property-info.cpp  property-info.h  signal-info.cpp  signal-info.h  signal.cpp  xml2cpp.cpp  xml_parser.cpp
tools/libcppgenerate/: CMakeLists.txt  README.md  cppgenerate-static.pc.cmake  cppgenerate.pc.cmake
trunk/dbus-cxx/: ChangeLog  Makefile.am  autogen.sh  configure.ac  configure.in  dbus-cxx-1.0.pc.cmake  dbus-cxx-1.0.pc.in  dbus-cxx.h  dbus-cxx.spec.m4  dbuscxx.kdevelop
unit-tests/: CMakeLists.txt  affinity-tests.cpp  callmessagetests.cpp  connectiontests.cpp  custom-type.cpp  custom-type.h  customaddress-test.cpp  datatests.cpp  dbus-wrapper-customaddress.sh  dbus-wrapper-data-tests.sh  dbus-wrapper-fd-tests.sh  dbus-wrapper-introspection-tests.sh  dbus-wrapper-objectmanager-tests.sh  dbus-wrapper-property-tests.sh  dbus-wrapper-recursive-signal.sh  dbus-wrapper-recursive.sh  dbus-wrapper.sh  filedescriptor-tests.cpp  introspection-test.cpp  messageiteratortests.cpp  messageiteratortests.h  objectmanagertests.cpp  objecttests.cpp  pathclasstests.cpp  property-test.cpp  recursive-signal-test.cpp  recursive-test.cpp  signaltests.cpp  signaturetests.cpp  test_macros.h  unset-envvars.cpp  validationtests.cpp
unit-tests/robustness-tests/: CMakeLists.txt  dbus-wrapper-robustness.sh  receive.cpp  send.cpp
unit-tests/tools-tests/: CMakeLists.txt  avahi-proxy.cpp  containertypes.xml  dbus-wrapper-signal.sh  multireturn.xml  nm-proxy.cpp  org.freedesktop.Avahi.Server.xml  org.freedesktop.NetworkManager.xml  signal-adapter.cpp  signal-interface.xml  signal-proxy.cpp  simple-adapter.cpp  simpletypes.xml  some-name-proxy.cpp  some.thing.xml  struct-adapter.cpp  taco-adapter.cpp  taco-proxy.cpp  tacointrospection.xml  test-multireturn.cpp
(+496 files in other folders)
